@@ -279,7 +279,10 @@ int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result)
 		else	ret = NOTSUPPORTED;
 	}
 
-	if(*p != ',')	ret = NOTSUPPORTED;
+	if(ret == SUCCEED)
+	{
+		if(*p != ',')	ret = NOTSUPPORTED;
+	}
 
 	if(ret == SUCCEED)
 	{
@@ -299,7 +302,10 @@ int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result)
 		else	ret = NOTSUPPORTED;
 	}
 
-	if(*p != ',')	ret = NOTSUPPORTED;
+	if(ret == SUCCEED)
+	{
+		if(*p != ',')	ret = NOTSUPPORTED;
+	}
 
 	if(ret == SUCCEED)
 	{
@@ -319,7 +325,10 @@ int	get_value_aggregate(DB_ITEM *item, AGENT_RESULT *result)
 		else	ret = NOTSUPPORTED;
 	}
 
-	if(*p != ',')	ret = NOTSUPPORTED;
+	if(ret == SUCCEED)
+	{
+		if(*p != ',')	ret = NOTSUPPORTED;
+	}
 
 	if(ret == SUCCEED)
 	{
